# scrabblebot

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  scrabble.py  test_bt_reply.py  test_unsupported_languages.py
tests/: test_main.py  test_rate_limiting.py  test_scrabble.py
